k8s/svc-engine.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: engine
  type: ClusterIP
